--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,8 +9,8 @@
     }
   ],
   "dependencies": {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
     "com.unity.logging": "1.3.10",
@@ -19,7 +19,6 @@
     "com.unity.test-framework": "1.5.1",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.6",
     "org.nuget.faker.net": "2.0.163",
     "org.nuget.newtonsoft.json": "13.0.3",
     "com.unity.modules.accessibility": "1.0.0",
