--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,7 +13,6 @@
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
-    "com.unity.logging": "1.3.10",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.render-pipelines.universal": "17.0.4",
     "com.unity.test-framework": "1.5.1",
@@ -21,6 +20,7 @@
     "com.unity.ugui": "2.0.0",
     "org.nuget.faker.net": "2.0.163",
     "org.nuget.newtonsoft.json": "13.0.3",
+    "org.nuget.serilog.sinks.file": "7.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
